# TICTACTOE2

./: Defense.hs  LICENSE  TICTACTOE2.cabal
app/: Main.hs
src/: Defense.hs  Gintis.hi  Gintis.hs  Main.hi  Main.hs  Parser.hs  Validate.hs
test/: Spec.hs
