name:                TICTACTOE2
version:             0.1
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/Ace124/TICTACTOE2#readme
license:             BSD3
license-file:        LICENSE
author:              Aurimas Mikėnas
maintainer:          aurimas.mikenas@mif.stud.vu.lt
copyright:           Aurimas Mikėnas
category:            game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable TICTACTOE2
  build-depends:  
   base , byteString , http-client , tuple
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  