name:                TICTACTOE2
version:             0.1
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/Ace124/TICTACTOE2#readme
license:             BSD3
license-file:        LICENSE
author:              Aurimas Mikėnas
maintainer:          aurimas.mikenas@mif.stud.vu.lt
copyright:           Aurimas Mikėnas
category:            game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Defense
  build-depends:       base >= 4.7 && < 5
                     , http-client
                     , http-types
                     , tuple
                     , bytestring
  default-language:    Haskell2010                   
  
executable TICTACTOE2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , http-client
                     , http-types
                     , tuple
                     , TICTACTOE2
                     , bytestring
  default-language:    Haskell2010
  